AASDocument, AASEndpoint updated

--- a/projects/aas-portal/src/assets/i18n/de-de.json
+++ b/projects/aas-portal/src/assets/i18n/de-de.json
@@ -83,8 +83,8 @@
     "LABEL_SELECT_WORKSPACE": "Gruppe",
     "LABEL_SELECT_REGISTRY": "AAS-Registry",
     "LABEL_SHOW_ALL": "Alle anzeigen",
-    "LABEL_REGISTRY_NAME": "Name",
-    "LABEL_REGISTRY_URL": "URL",
+    "LABEL_ENDPOINT_NAME": "Name",
+    "LABEL_ENDPOINT_URL": "URL",
     "LABEL_VIEW_MODE": "Anzeige:",
     "LABEL_INFO": "Info",
     "LABEL_WARNING": "Warnungen",
