--- a/projects/aas-portal/src/assets/i18n/en-us.json
+++ b/projects/aas-portal/src/assets/i18n/en-us.json
@@ -83,8 +83,8 @@
     "LABEL_SELECT_WORKSPACE": "Group",
     "LABEL_SELECT_REGISTRY": "AAS registry",
     "LABEL_SHOW_ALL": "Show all",
-    "LABEL_REGISTRY_NAME": "Name",
-    "LABEL_REGISTRY_URL": "URL",
+    "LABEL_ENDPOINT_NAME": "Name",
+    "LABEL_ENDPOINT_URL": "URL",
     "LABEL_VIEW_MODE": "View:",
     "LABEL_INFO": "Info",
     "LABEL_WARNING": "Warnings",
