fix: update unit tests

--- a/projects/aas-portal/src/assets/i18n/de-de.json
+++ b/projects/aas-portal/src/assets/i18n/de-de.json
@@ -21,6 +21,7 @@
     "CAPTION_INFO": "Info",
     "CAPTION_WARNING": "Warnung",
     "CAPTION_UPLOAD_FILE": "AASX-Datei hochladen",
+    "CAPTION_FAVORITES": "Favoriten",
     "CMD_OK": "OK",
     "CMD_OPEN_AAS": "VWS öffnen",
     "CMD_UPLOAD": "Hochladen",
@@ -117,6 +118,7 @@
     "PLACEHOLDER_FILTER": "Filter",
     "PLACEHOLDER_WORKSPACE": "Gruppenname",
     "PLACEHOLDER_SEARCH": "Suche",
+    "PLACEHOLDER_NEW_FAVORITES": "neue Favoriten",
     "GUEST_USER": "Gast",
     "ERROR_UNCAUGHT": "{0}",
     "ERROR_UNKNOWN_USER": "Der Benutzer {0} ist unbekannt.",
