--- a/projects/aas-portal/src/assets/i18n/en-us.json
+++ b/projects/aas-portal/src/assets/i18n/en-us.json
@@ -21,6 +21,7 @@
     "CAPTION_INFO": "Info",
     "CAPTION_WARNING": "Warning",
     "CAPTION_UPLOAD_FILE": "Upload AASX File",
+    "CAPTION_FAVORITES": "Favorites",
     "CMD_OK": "OK",
     "CMD_OPEN_AAS": "Open AAS",
     "CMD_UPLOAD": "Upload",
@@ -117,6 +118,7 @@
     "PLACEHOLDER_FILTER": "Filter",
     "PLACEHOLDER_WORKSPACE": "group name",
     "PLACEHOLDER_SEARCH": "Search",
+    "PLACEHOLDER_NEW_FAVORITES": "new favorites",
     "GUEST_USER": "Guest",
     "ERROR_UNCAUGHT": "{0}",
     "ERROR_UNKNOWN_USER": "The user {0} is unknown.",
