--- a/projects/aas-portal/src/assets/i18n/en-us.json
+++ b/projects/aas-portal/src/assets/i18n/en-us.json
@@ -181,14 +181,16 @@
     },
     "QueryParser": {
         "ELEMENT_NAME_EXPECTED": "Submodel element name expected at position {0}.",
+        "END_OF_TEXT_NOT_FOUND": "The end of the text, starting at position {0}, was not found.",
         "INVALID_ABBREVIATION": "'{0}' is an invalid model type abbreviation at position {1}.",
         "INVALID_DATE_EXPRESSION": "'{0}' is an invalid date expression at position {1}.",
+        "INVALID_NESTED_EXPRESSION": "Invalid nested expression.",
         "INVALID_OPERATOR": "'{0}' is an invalid operator at position {1}.",
         "INVALID_RANGE_EXPRESSION": "'{0}' is an invalid range expression at position {1}.",
         "LINK_EXPECTED": "'||' or '&&' expected at position {0}",
         "MIN_LENGTH": "A query expression must contain at least {0} characters.",
         "MODEL_TYPE_EXPECTED": "Model type abbreviation expected at position {0}.",
         "TERM_EXPECTED": "Term expected at position {0}.",
-        "END_OF_TEXT_NOT_FOUND": "The end of the text, starting at position {0}, was not found."
+        "UNEXPECTED_CLOSING_BRACKET": "Unexpected closing bracket at position ${0}."
     }
 }
