--- a/aasportal.mdx
+++ b/aasportal.mdx
@@ -381,7 +381,6 @@
   <object id="oUNKi+15okyeKIB7PKKVWA" type="umlpackage.uml"/>
   <object id="ysW2O4OuPE+JXZZHiM7bgA" type="umlpackageview.uml"/>
   <object id="E1gB0K/1aEC4yFtDwLcsRA" type="umlpackageview.uml"/>
-  <object id="CKiSmncpu0OT/bsByK82PA" type="umlpackage.uml"/>
   <object id="W2oDpgF/l0+GosDZXdfq1w" type="umlnode.uml"/>
   <object id="oD2yNxReVESUoKiQquH4ig" type="umlclassdiagram.uml"/>
   <object id="S/zEm4A2xUeGxS9ELoKjaw" type="umlclassdiagramview.uml"/>
@@ -536,8 +535,6 @@
   <object id="nvq7J+QtYEWAUdAXIk4UEw" type="comment.core"/>
   <object id="q0je4tOT6U+Jt9BRkZ25Ng" type="commentview.core"/>
   <object id="dbJ2ZXplg0mFAqQrROtyuQ" type="annotationlinkview.core"/>
-  <object id="+Eu802agM0CImq3TCqYlxQ" type="comment.core"/>
-  <object id="grrwghe9NEuW9lDsCfd2ow" type="commentview.core"/>
  </objects>
  <relations>
   <relation from="lUNC+bF3k0CvtsFIiXav0g" id="q/xoc+bMRUS0em49DKsxdw" to="09ZDFMDrFUyf7OuCrLmopQ" type="umlusage.model.model.uml"/>
@@ -1266,7 +1263,6 @@
   <reference from="oUNKi+15okyeKIB7PKKVWA" to="Tu7y1wXKj0+cIDAoE8pQ1A" type="owner.models.package.model.core"/>
   <reference from="09ZDFMDrFUyf7OuCrLmopQ" to="E1gB0K/1aEC4yFtDwLcsRA" type="model.views.umlpackage.umlpackageview.uml"/>
   <reference from="96OMRyNnHUSlgiu7drD3Ug" to="E1gB0K/1aEC4yFtDwLcsRA" type="diagram.nodes.umlclassdiagramview.umlpackageview.uml"/>
-  <reference from="09ZDFMDrFUyf7OuCrLmopQ" to="CKiSmncpu0OT/bsByK82PA" type="owner.models.package.model.core"/>
   <reference from="UUKWyDgmskaGCQfLenTqKA" to="W2oDpgF/l0+GosDZXdfq1w" type="owner.models.package.model.core"/>
   <reference from="oD2yNxReVESUoKiQquH4ig" to="S/zEm4A2xUeGxS9ELoKjaw" type="model.views.umlclassdiagram.umlclassdiagramview.uml"/>
   <reference from="+ibVli2QO0yIf8w9B+rkrQ" to="dpevynsRpkywZ1F5q3o1PQ" type="owner.models.package.model.core"/>
@@ -1508,9 +1504,6 @@
   <reference from="dbJ2ZXplg0mFAqQrROtyuQ" to="q0je4tOT6U+Jt9BRkZ25Ng" type="outgoing.head.edgeview.nodeview.core"/>
   <reference from="QLR5c0b2bEGrNcrGv5U2yw" to="dbJ2ZXplg0mFAqQrROtyuQ" type="model.views.annotationlink.annotationlinkview.core"/>
   <reference from="dbJ2ZXplg0mFAqQrROtyuQ" to="Ia/1z6qBMkucunGDlHOypw" type="incoming.tail.edgeview.nodeview.core"/>
-  <reference from="UUKWyDgmskaGCQfLenTqKA" to="+Eu802agM0CImq3TCqYlxQ" type="owner.models.package.model.core"/>
-  <reference from="+Eu802agM0CImq3TCqYlxQ" to="grrwghe9NEuW9lDsCfd2ow" type="model.views.comment.commentview.core"/>
-  <reference from="2dG44NZ4Gk+1Io5Di1GHfA" to="grrwghe9NEuW9lDsCfd2ow" type="diagram.nodes.diagramview.commentview.core"/>
  </references>
  <object-values>
   <value-owner id="S57xNtztBku7sXcTeZEkKA">
@@ -1568,7 +1561,7 @@
    <value name="order">1</value>
   </value-owner>
   <value-owner id="Lq8hPe23skad9ufoSm/mdA">
-   <value name="rendering">{&quot;bounds&quot;: &quot;487,157,107,70&quot;,&quot;model&quot;: &quot;lUNC+bF3k0CvtsFIiXav0g&quot;,&quot;name&quot;: &quot;aas-server&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;487,157,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;499,189,83,13&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;515,202,52,13&quot;,&quot;text&quot;: &quot;aas-server&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;487,157,107,70&quot;,&quot;model&quot;: &quot;lUNC+bF3k0CvtsFIiXav0g&quot;,&quot;name&quot;: &quot;aas-server&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;487,157,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;492,186,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;510,202,61,16&quot;,&quot;text&quot;: &quot;aas-server&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">449,101,107,70</value>
   </value-owner>
   <value-owner id="09ZDFMDrFUyf7OuCrLmopQ">
@@ -1577,7 +1570,7 @@
    <value name="order">3</value>
   </value-owner>
   <value-owner id="QAQeccu/akuy198osjNpNQ">
-   <value name="rendering">{&quot;bounds&quot;: &quot;297,337,107,70&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,337,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;309,369,83,13&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;331,382,39,13&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;297,337,107,70&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,337,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;302,366,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;326,382,49,16&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">259,281,107,70</value>
   </value-owner>
   <value-owner id="DeQ8pr3tJUGspQctw7VbUw">
@@ -1926,7 +1919,7 @@
    <value name="order">4</value>
   </value-owner>
   <value-owner id="qkWHjloAkEuIXzfQs9ZESw">
-   <value name="rendering">{&quot;bounds&quot;: &quot;308,166,105,70&quot;,&quot;model&quot;: &quot;3rlR8jf5MEm3e8UUHSd2vQ&quot;,&quot;name&quot;: &quot;users&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;308,166,105,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;348,204,26,13&quot;,&quot;text&quot;: &quot;users&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;308,166,105,70&quot;,&quot;model&quot;: &quot;3rlR8jf5MEm3e8UUHSd2vQ&quot;,&quot;name&quot;: &quot;users&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;308,166,105,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;345,203,31,16&quot;,&quot;text&quot;: &quot;users&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">308,166,105,70</value>
   </value-owner>
   <value-owner id="+DszC4J/o0KpLHMfXSIcYA">
@@ -2273,7 +2266,7 @@
    <value name="order">10</value>
   </value-owner>
   <value-owner id="aGVsnQUEn0ivf0SqLG924w">
-   <value name="rendering">{&quot;bounds&quot;: &quot;108,286,105,70&quot;,&quot;model&quot;: &quot;h88sdLXLCEqfOx76khYx5g&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;108,286,105,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;141,324,39,13&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;108,286,105,70&quot;,&quot;model&quot;: &quot;h88sdLXLCEqfOx76khYx5g&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;108,286,105,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;136,323,49,16&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">108,286,105,70</value>
   </value-owner>
   <value-owner id="EbGjZANjqkG09IY0dom9fg">
@@ -2281,7 +2274,7 @@
    <value name="order">11</value>
   </value-owner>
   <value-owner id="7UfsWlv9/0m2bCLSNsC1KA">
-   <value name="rendering">{&quot;bounds&quot;: &quot;108,166,105,70&quot;,&quot;model&quot;: &quot;EbGjZANjqkG09IY0dom9fg&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;108,166,105,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;136,204,49,13&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;108,166,105,70&quot;,&quot;model&quot;: &quot;EbGjZANjqkG09IY0dom9fg&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;108,166,105,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;132,203,58,16&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">108,166,105,70</value>
   </value-owner>
   <value-owner id="G7G5xxvjf0mhFUnmK8XtpA">
@@ -2733,22 +2726,22 @@
   </value-owner>
   <value-owner id="YU49xadxiUm+XA2jmjG0IA">
    <value name="name">PC, Tablet, Phone</value>
-   <value name="stereotype">browser</value>
+   <value name="stereotype">device</value>
    <value name="order">2</value>
   </value-owner>
   <value-owner id="KPUJKIappkioBOe2vO3AKw">
    <value name="style">{&quot;border-color&quot;: &quot;91,155,213,255&quot;,&quot;fill-color&quot;: &quot;151,188,228,255&quot;,&quot;font-color&quot;: &quot;0,0,0,255&quot;,&quot;gradient&quot;: false,&quot;shadow&quot;: false}</value>
-   <value name="rendering">{&quot;bounds&quot;: &quot;291,66,166,80&quot;,&quot;model&quot;: &quot;YU49xadxiUm+XA2jmjG0IA&quot;,&quot;name&quot;: &quot;PC, Tablet, Phone&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;291,66,166,80&quot;,&quot;path&quot;: &quot;shapes/node.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;28,22,29,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;330,92,83,16&quot;,&quot;text&quot;: &quot;&lt;&lt;browser&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;316,108,112,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;PC, Tablet, Phone&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLNodeView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;291,66,166,80&quot;,&quot;model&quot;: &quot;YU49xadxiUm+XA2jmjG0IA&quot;,&quot;name&quot;: &quot;PC, Tablet, Phone&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;291,66,166,80&quot;,&quot;path&quot;: &quot;shapes/node.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;28,22,29,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;336,92,72,16&quot;,&quot;text&quot;: &quot;&lt;&lt;device&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;316,108,112,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;PC, Tablet, Phone&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLNodeView&quot;}</value>
    <value name="bounds">291,66,166,80</value>
   </value-owner>
   <value-owner id="99kwFUgB7EqpO13lxMSpzg">
-   <value name="name">aas-web-app</value>
+   <value name="name">aas-portal</value>
    <value name="stereotype">service</value>
    <value name="order">5</value>
   </value-owner>
   <value-owner id="gcLWzxt+Iki9a1LdQMHh1g">
    <value name="style">{&quot;fill-color&quot;: &quot;255,255,255,255&quot;}</value>
-   <value name="rendering">{&quot;bounds&quot;: &quot;291,227,166,80&quot;,&quot;model&quot;: &quot;99kwFUgB7EqpO13lxMSpzg&quot;,&quot;name&quot;: &quot;aas-web-app&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;291,227,166,80&quot;,&quot;path&quot;: &quot;shapes/node.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;28,22,29,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;334,253,76,16&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;329,269,86,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;aas-web-app&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLNodeView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;291,227,166,80&quot;,&quot;model&quot;: &quot;99kwFUgB7EqpO13lxMSpzg&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;291,227,166,80&quot;,&quot;path&quot;: &quot;shapes/node.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;28,22,29,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;334,253,76,16&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;338,269,68,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLNodeView&quot;}</value>
    <value name="bounds">291,227,166,80</value>
   </value-owner>
   <value-owner id="xhl6qZPr8kuzihQSWvmyGg">
@@ -3273,7 +3266,7 @@
    <value name="name">aas-portal</value>
   </value-owner>
   <value-owner id="eaulo7h4lkuax/5uv0/2+w">
-   <value name="rendering">{&quot;bounds&quot;: &quot;97,157,107,70&quot;,&quot;model&quot;: &quot;r2NZ58QNZEKWlYvOGlT11g&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;97,157,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;109,189,83,13&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;126,202,49,13&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;97,157,107,70&quot;,&quot;model&quot;: &quot;r2NZ58QNZEKWlYvOGlT11g&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;97,157,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;102,186,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;122,202,58,16&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">59,101,107,70</value>
   </value-owner>
   <value-owner id="f+zgiMUtDUSAuaIiKqqThQ">
@@ -3310,13 +3303,13 @@
    <value name="order">10</value>
   </value-owner>
   <value-owner id="qdayvcplfEapRY3chDyZvA">
-   <value name="name">aas-server-app</value>
+   <value name="name">aas-server</value>
    <value name="stereotype">service</value>
    <value name="order">13</value>
   </value-owner>
   <value-owner id="srHpAFbMyUyPnSXpuQT/0g">
    <value name="style">{&quot;fill-color&quot;: &quot;255,255,255,255&quot;}</value>
-   <value name="rendering">{&quot;bounds&quot;: &quot;291,395,166,80&quot;,&quot;model&quot;: &quot;qdayvcplfEapRY3chDyZvA&quot;,&quot;name&quot;: &quot;aas-server-app&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;291,395,166,80&quot;,&quot;path&quot;: &quot;shapes/node.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;28,22,29,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;334,421,76,16&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;321,437,102,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;aas-server-app&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLNodeView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;291,395,166,80&quot;,&quot;model&quot;: &quot;qdayvcplfEapRY3chDyZvA&quot;,&quot;name&quot;: &quot;aas-server&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;291,395,166,80&quot;,&quot;path&quot;: &quot;shapes/node.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;28,22,29,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;334,421,76,16&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;336,437,72,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;aas-server&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLNodeView&quot;}</value>
    <value name="bounds">291,395,166,80</value>
   </value-owner>
   <value-owner id="cmOEgyeti02akOoZ1BETVg">
@@ -3804,11 +3797,11 @@
   </value-owner>
   <value-owner id="P6w27jhd6EePFn9YYQjiIA">
    <value name="name">aas-portal</value>
-   <value name="stereotype">browser app</value>
+   <value name="stereotype">web side</value>
    <value name="order">23</value>
   </value-owner>
   <value-owner id="cT15heRo9UusERPTweeSPw">
-   <value name="rendering">{&quot;bounds&quot;: &quot;50,246,138,80&quot;,&quot;model&quot;: &quot;P6w27jhd6EePFn9YYQjiIA&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;50,246,138,80&quot;,&quot;path&quot;: &quot;shapes/artifact.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;5,22,19,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;65,269,108,16&quot;,&quot;text&quot;: &quot;&lt;&lt;browser app&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;85,285,68,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLArtifactView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;50,246,138,80&quot;,&quot;model&quot;: &quot;P6w27jhd6EePFn9YYQjiIA&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;50,246,138,80&quot;,&quot;path&quot;: &quot;shapes/artifact.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;5,22,19,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;76,269,87,16&quot;,&quot;text&quot;: &quot;&lt;&lt;web side&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;85,285,68,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLArtifactView&quot;}</value>
    <value name="bounds">50,246,138,80</value>
   </value-owner>
   <value-owner id="fMw8fPNPm0CDAK2+p2Z5+Q">
@@ -3997,7 +3990,7 @@
    <value name="order">5</value>
   </value-owner>
   <value-owner id="5uBE4RZ8LUyDV3/GaUsoVw">
-   <value name="rendering">{&quot;bounds&quot;: &quot;297,157,107,70&quot;,&quot;model&quot;: &quot;Tu7y1wXKj0+cIDAoE8pQ1A&quot;,&quot;name&quot;: &quot;aas-lib&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,157,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;309,189,83,13&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;335,202,31,13&quot;,&quot;text&quot;: &quot;aas-lib&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;297,157,107,70&quot;,&quot;model&quot;: &quot;Tu7y1wXKj0+cIDAoE8pQ1A&quot;,&quot;name&quot;: &quot;aas-lib&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,157,107,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;302,186,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;332,202,38,16&quot;,&quot;text&quot;: &quot;aas-lib&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">259,101,107,70</value>
   </value-owner>
   <value-owner id="9OPTogAnL0a2YuO8aeLLTQ">
@@ -4067,16 +4060,12 @@
   </value-owner>
   <value-owner id="ysW2O4OuPE+JXZZHiM7bgA">
    <value name="style">{&quot;fill-color&quot;: &quot;255,255,255,255&quot;}</value>
-   <value name="rendering">{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;model&quot;: &quot;oUNKi+15okyeKIB7PKKVWA&quot;,&quot;name&quot;: &quot;aasportal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;304,81,72,13&quot;,&quot;text&quot;: &quot;&lt;&lt;package&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;317,94,45,13&quot;,&quot;text&quot;: &quot;aasportal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;model&quot;: &quot;oUNKi+15okyeKIB7PKKVWA&quot;,&quot;name&quot;: &quot;aasportal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;298,81,83,16&quot;,&quot;text&quot;: &quot;&lt;&lt;package&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;313,97,53,16&quot;,&quot;text&quot;: &quot;aasportal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">38,56,603,385</value>
   </value-owner>
   <value-owner id="E1gB0K/1aEC4yFtDwLcsRA">
-   <value name="rendering">{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;288,205,83,13&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;310,218,39,13&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;281,202,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;305,218,49,16&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">138,56,383,305</value>
-  </value-owner>
-  <value-owner id="CKiSmncpu0OT/bsByK82PA">
-   <value name="name">Package1</value>
-   <value name="order">4</value>
   </value-owner>
   <value-owner id="W2oDpgF/l0+GosDZXdfq1w">
    <value name="name">aasportal</value>
@@ -5051,11 +5040,11 @@
    <value name="sub-on-edit-text">uml.onEditAttribute(view, model, text)</value>
   </value-owner>
   <value-owner id="PDNvFWD7ckK6KJluMdDsfg">
-   <value name="name">ownCloud</value>
+   <value name="name">NextCloud</value>
    <value name="order">22</value>
   </value-owner>
   <value-owner id="OMgjbyjrEEKg3B3U7C2WIQ">
-   <value name="rendering">{&quot;bounds&quot;: &quot;849,517,140,80&quot;,&quot;model&quot;: &quot;PDNvFWD7ckK6KJluMdDsfg&quot;,&quot;name&quot;: &quot;ownCloud&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;849,517,140,80&quot;,&quot;path&quot;: &quot;shapes/artifact.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;5,22,19,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;888,548,62,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;ownCloud&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLArtifactView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;849,517,140,80&quot;,&quot;model&quot;: &quot;PDNvFWD7ckK6KJluMdDsfg&quot;,&quot;name&quot;: &quot;NextCloud&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;849,517,140,80&quot;,&quot;path&quot;: &quot;shapes/artifact.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;5,22,19,22&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;887,548,64,16&quot;,&quot;fontStyle&quot;: &quot;2&quot;,&quot;text&quot;: &quot;NextCloud&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLArtifactView&quot;}</value>
    <value name="bounds">849,517,140,80</value>
   </value-owner>
   <value-owner id="/dFDL6PG40aVBA1j29wWUA">
@@ -5238,15 +5227,16 @@
    <value name="body"><![CDATA[AASX Server
 OPCUA Server
 FAAAST
+BaSyx
 Cloud (static .aasx files)]]></value>
   </value-owner>
   <value-owner id="lv5cOhonIkONfkFZt/9d0w">
-   <value name="rendering">{&quot;bounds&quot;: &quot;438,655,157,126&quot;,&quot;model&quot;: &quot;tbO7QEXmeE2hsNe9+Sg56Q&quot;,&quot;name&quot;: &quot;Comment1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;438,655,157,126&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;443,660,137,64&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;AASX Server\r\nOPCUA Server\r\nFAAAST\r\nCloud (static .aasx files)&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
-   <value name="bounds">438,655,157,126</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;438,655,157,106&quot;,&quot;model&quot;: &quot;tbO7QEXmeE2hsNe9+Sg56Q&quot;,&quot;name&quot;: &quot;Comment1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;438,655,157,106&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;443,660,137,80&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;AASX Server\nOPCUA Server\nFAAAST\nBaSyx\nCloud (static .aasx files)&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
+   <value name="bounds">438,655,157,106</value>
   </value-owner>
   <value-owner id="L1aoKIoMTkuet3lSKtVfoQ">
-   <value name="rendering">{&quot;model&quot;: &quot;hpvaFPo6/kyNmtFvEwOXOQ&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;450,655,413,620,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
-   <value name="points">450,655,413,620,</value>
+   <value name="rendering">{&quot;model&quot;: &quot;hpvaFPo6/kyNmtFvEwOXOQ&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;456,655,416,620,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
+   <value name="points">456,655,416,620,</value>
   </value-owner>
   <value-owner id="nvq7J+QtYEWAUdAXIk4UEw">
    <value name="name">Comment2</value>
@@ -5261,14 +5251,6 @@ Static .aasx files]]></value>
   <value-owner id="dbJ2ZXplg0mFAqQrROtyuQ">
    <value name="rendering">{&quot;model&quot;: &quot;QLR5c0b2bEGrNcrGv5U2yw&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;691,645,663,596,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
    <value name="points">691,645,663,596,</value>
-  </value-owner>
-  <value-owner id="+Eu802agM0CImq3TCqYlxQ">
-   <value name="name">Comment3</value>
-   <value name="order">21</value>
-  </value-owner>
-  <value-owner id="grrwghe9NEuW9lDsCfd2ow">
-   <value name="rendering">{&quot;bounds&quot;: &quot;81,656,80,50&quot;,&quot;model&quot;: &quot;+Eu802agM0CImq3TCqYlxQ&quot;,&quot;name&quot;: &quot;Comment3&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;81,656,80,50&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
-   <value name="bounds">81,656,80,50</value>
   </value-owner>
  </object-values>
  <relation-values>
