fix: unit tests updated (dashboard, about)

--- a/projects/aas-portal/src/assets/i18n/en-us.json
+++ b/projects/aas-portal/src/assets/i18n/en-us.json
@@ -152,9 +152,9 @@
     "INFO_DOWNLOAD_FILE_SUCCESS": "{0} was downloaded successfully.",
     "INFO_UPLOAD_AASX_FILE_SUCCESS": "{0} was uploaded successfully.",
     "INFO_EMPTY_DASHBOARD": "The dashboard is empty.",
-    "INFO_NO_DOCUMENT": "No Asset Administration Shell available.",
-    "INFO_NOT_SUPPORTED_SUBMODEL_VIEW": "is an unsupported submodel view.",
+    "INFO_NO_SHELL_AVAILABLE": "No Asset Administration Shell selected.",
     "INFO_NO_SHELLS_AVAILABLE": "No Asset Administration Shells available.",
+    "INFO_EMPTY_DISPLAY": "No elements available for display.",
     "CONFIRM_DELETE_FILE": "Permanently delete {0}?",
     "CONFIRM_DELETE_FILES": "Permanently delete {0} files?",
     "CONFIRM_RESET_CONFIGURATION": "Do you want to restore the default AASServer configuration?",
