--- a/projects/aas-portal/src/assets/i18n/de-de.json
+++ b/projects/aas-portal/src/assets/i18n/de-de.json
@@ -152,10 +152,10 @@
     "INFO_DOWNLOAD_FILE_SUCCESS": "{0} wurde erfolgreich heruntergeladen.",
     "INFO_UPLOAD_AASX_FILE_SUCCESS": "{0} wurde erfolgreich hochgeladen.",
     "INFO_EMPTY_DASHBOARD": "Das Dashboard ist leer.",
-    "INFO_NO_DOCUMENT": "Keine Verwaltungsschale verfügbar.",
+    "INFO_NO_SHELL_AVAILABLE": "Keine Verwaltungsschale ausgewählt.",
     "INFO_NO_SUBMODEL": "Kein Submodel verfügbar.",
-    "INFO_NOT_SUPPORTED_SUBMODEL_VIEW": "ist eine nicht unterstützte Submodel-Sicht.",
     "INFO_NO_SHELLS_AVAILABLE": "Keine Verwaltungsschalen verfügbar.",
+    "INFO_EMPTY_DISPLAY": "Keine Elemente zur Anzeige verfügbar.",
     "CONFIRM_DELETE_FILE": "{0} unwiderruflich löschen?",
     "CONFIRM_DELETE_FILES": "{0} Dateien unwiderruflich löschen?",
     "CONFIRM_RESET_CONFIGURATION": "Möchten Sie die AASServer Standardkonfiguration wiederherstellen?",
