--- a/projects/aas-portal/src/assets/i18n/de-de.json
+++ b/projects/aas-portal/src/assets/i18n/de-de.json
@@ -108,6 +108,7 @@
     "LABEL_VIEWS": "Sichten",
     "LABEL_CATEGORY": "Kategorie",
     "LABEL_SEMANTIC_ID": "Semantik ID",
+    "LABEL_EDIT_MODE": "Bearbeiten",
     "PLEASE_WAIT": "Bitte warten...",
     "PLACEHOLDER_EMAIL": "E-Mail-Adresse eingeben",
     "PLACEHOLDER_PASSWORD": "Passwort eingeben",
