--- a/projects/aas-portal/src/assets/i18n/de-de.json
+++ b/projects/aas-portal/src/assets/i18n/de-de.json
@@ -176,10 +176,10 @@
     "TEXT_ADD_FAVORITE": "1 Favorit hinzufügen ({0}).",
     "TEXT_ADD_FAVORITES": "{0} Favoriten hinzufügen ({1}).",
     "AASEndpointType": {
-        "FileSystem": "Verzeichnis",
-        "AASServer": "AAS-Server",
-        "WebDAV": "Cloud-Server",
-        "OpcuaServer": "OPC-UA-Server"
+        "FileSystem": "Dateisystem",
+        "AAS_API": "AAS API",
+        "WebDAV": "WebDAV",
+        "OPC_UA": "OPC UA"
     },
     "CustomerFeedback": {
         "OverallRating": "Gesamtbewertung",
