fix: update Angular 18.1

--- a/aasportal.mdx
+++ b/aasportal.mdx
@@ -574,6 +574,11 @@
   <object id="LCjA8rstskSIxz6BRztCKA" type="rectview.core"/>
   <object id="G2n8Ln8qCEu+nLT5GMxKYw" type="textcompartmentview.core"/>
   <object id="K81tdr/0JUuz9jjwaF+eqA" type="annotationlinkview.core"/>
+  <object id="ZtMAiFX1j0aRRaff6X+9Nw" type="comment.core"/>
+  <object id="1CSm1GLCakaeAQ7iHk+MCg" type="commentview.core"/>
+  <object id="cuko9kb+bEaJBPGlJE2UdQ" type="annotationlinkview.core"/>
+  <object id="nNYTytmN+E6fRcW3SyzZfw" type="textshape.core"/>
+  <object id="g0jjnLiGUUycmsxOz0Rvzg" type="textshapeview.core"/>
  </objects>
  <relations>
   <relation from="lUNC+bF3k0CvtsFIiXav0g" id="q/xoc+bMRUS0em49DKsxdw" to="09ZDFMDrFUyf7OuCrLmopQ" type="umlusage.model.model.uml"/>
@@ -698,6 +703,7 @@
   <relation from="ssdT2k63ZkO2U2iIxZhoTw" id="nojpWWV0+kmOB6Z1t/o+gA" to="99kwFUgB7EqpO13lxMSpzg" type="umlassociation.umlclassifier.umlclassifier.uml"/>
   <relation from="qdayvcplfEapRY3chDyZvA" id="jxWfKWQcZ0iIVAEVUCD7HQ" to="03ABCyCVSkyMxXYsdF6XVA" type="umlassociation.umlclassifier.umlclassifier.uml"/>
   <relation from="tbO7QEXmeE2hsNe9+Sg56Q" id="nQXu2MZ4bEW51iMg7auViw" to="03ABCyCVSkyMxXYsdF6XVA" type="annotationlink.annotation.model.core"/>
+  <relation from="ZtMAiFX1j0aRRaff6X+9Nw" id="R/rBYR5BqkS8S0wyL8+Vwg" to="ssdT2k63ZkO2U2iIxZhoTw" type="annotationlink.annotation.model.core"/>
  </relations>
  <references>
   <reference from="samDh2TTAkaUPqSEjDRNxg" to="zFSogviYukury4amDScHuw" type="owner.models.package.model.core"/>
@@ -1605,6 +1611,16 @@
   <reference from="K81tdr/0JUuz9jjwaF+eqA" to="klb+4cFEN0mO1OaJHu0dDA" type="incoming.tail.edgeview.nodeview.core"/>
   <reference from="2dG44NZ4Gk+1Io5Di1GHfA" to="K81tdr/0JUuz9jjwaF+eqA" type="diagram.edges.diagramview.annotationlinkview.core"/>
   <reference from="nQXu2MZ4bEW51iMg7auViw" to="K81tdr/0JUuz9jjwaF+eqA" type="model.views.annotationlink.annotationlinkview.core"/>
+  <reference from="UUKWyDgmskaGCQfLenTqKA" to="ZtMAiFX1j0aRRaff6X+9Nw" type="owner.models.package.model.core"/>
+  <reference from="ZtMAiFX1j0aRRaff6X+9Nw" to="1CSm1GLCakaeAQ7iHk+MCg" type="model.views.comment.commentview.core"/>
+  <reference from="2dG44NZ4Gk+1Io5Di1GHfA" to="1CSm1GLCakaeAQ7iHk+MCg" type="diagram.nodes.diagramview.commentview.core"/>
+  <reference from="cuko9kb+bEaJBPGlJE2UdQ" to="1CSm1GLCakaeAQ7iHk+MCg" type="outgoing.head.edgeview.nodeview.core"/>
+  <reference from="cuko9kb+bEaJBPGlJE2UdQ" to="22LY/jPYLUeq3gUdVyb2gQ" type="incoming.tail.edgeview.nodeview.core"/>
+  <reference from="2dG44NZ4Gk+1Io5Di1GHfA" to="cuko9kb+bEaJBPGlJE2UdQ" type="diagram.edges.diagramview.annotationlinkview.core"/>
+  <reference from="R/rBYR5BqkS8S0wyL8+Vwg" to="cuko9kb+bEaJBPGlJE2UdQ" type="model.views.annotationlink.annotationlinkview.core"/>
+  <reference from="UUKWyDgmskaGCQfLenTqKA" to="nNYTytmN+E6fRcW3SyzZfw" type="owner.models.package.model.core"/>
+  <reference from="nNYTytmN+E6fRcW3SyzZfw" to="g0jjnLiGUUycmsxOz0Rvzg" type="model.views.textshape.textshapeview.core"/>
+  <reference from="2dG44NZ4Gk+1Io5Di1GHfA" to="g0jjnLiGUUycmsxOz0Rvzg" type="diagram.nodes.diagramview.textshapeview.core"/>
  </references>
  <object-values>
   <value-owner id="S57xNtztBku7sXcTeZEkKA">
@@ -1662,7 +1678,7 @@
    <value name="order">1</value>
   </value-owner>
   <value-owner id="Lq8hPe23skad9ufoSm/mdA">
-   <value name="rendering">{&quot;bounds&quot;: &quot;487,157,132,70&quot;,&quot;model&quot;: &quot;lUNC+bF3k0CvtsFIiXav0g&quot;,&quot;name&quot;: &quot;aas-server&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;487,157,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;492,183,122,19&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;517,202,72,19&quot;,&quot;text&quot;: &quot;aas-server&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;487,157,132,70&quot;,&quot;model&quot;: &quot;lUNC+bF3k0CvtsFIiXav0g&quot;,&quot;name&quot;: &quot;aas-server&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;487,157,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;505,186,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;523,202,61,16&quot;,&quot;text&quot;: &quot;aas-server&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">449,101,132,70</value>
   </value-owner>
   <value-owner id="09ZDFMDrFUyf7OuCrLmopQ">
@@ -1671,7 +1687,7 @@
    <value name="order">3</value>
   </value-owner>
   <value-owner id="QAQeccu/akuy198osjNpNQ">
-   <value name="rendering">{&quot;bounds&quot;: &quot;297,337,132,70&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;aas-core&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,337,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;302,363,122,19&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;334,382,59,19&quot;,&quot;text&quot;: &quot;aas-core&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;297,337,132,70&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;aas-core&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,337,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;315,366,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;338,382,50,16&quot;,&quot;text&quot;: &quot;aas-core&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">259,281,132,70</value>
   </value-owner>
   <value-owner id="DeQ8pr3tJUGspQctw7VbUw">
@@ -2964,7 +2980,7 @@
    <value name="on-edit-text">uml.onEditStereotype(view, model, text)</value>
   </value-owner>
   <value-owner id="pDi5FsGuqk2JwIxP/hF9cQ">
-   <value name="name">common</value>
+   <value name="name">aas-core</value>
    <value name="order">5</value>
   </value-owner>
   <value-owner id="OhLL6GlOn0afzq6Vma36aw">
@@ -3239,7 +3255,7 @@
    <value name="name">aas-portal</value>
   </value-owner>
   <value-owner id="eaulo7h4lkuax/5uv0/2+w">
-   <value name="rendering">{&quot;bounds&quot;: &quot;97,157,132,70&quot;,&quot;model&quot;: &quot;r2NZ58QNZEKWlYvOGlT11g&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;97,157,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;102,183,122,19&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;128,202,70,19&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;97,157,132,70&quot;,&quot;model&quot;: &quot;r2NZ58QNZEKWlYvOGlT11g&quot;,&quot;name&quot;: &quot;aas-portal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;97,157,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;115,186,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;134,202,58,16&quot;,&quot;text&quot;: &quot;aas-portal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">59,101,132,70</value>
   </value-owner>
   <value-owner id="f+zgiMUtDUSAuaIiKqqThQ">
@@ -3640,7 +3656,7 @@
    <value name="order">5</value>
   </value-owner>
   <value-owner id="5uBE4RZ8LUyDV3/GaUsoVw">
-   <value name="rendering">{&quot;bounds&quot;: &quot;297,157,132,70&quot;,&quot;model&quot;: &quot;Tu7y1wXKj0+cIDAoE8pQ1A&quot;,&quot;name&quot;: &quot;aas-lib&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,157,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;302,183,122,19&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;340,202,46,19&quot;,&quot;text&quot;: &quot;aas-lib&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;297,157,132,70&quot;,&quot;model&quot;: &quot;Tu7y1wXKj0+cIDAoE8pQ1A&quot;,&quot;name&quot;: &quot;aas-lib&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;297,157,132,70&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;315,186,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;344,202,38,16&quot;,&quot;text&quot;: &quot;aas-lib&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">259,101,132,70</value>
   </value-owner>
   <value-owner id="9OPTogAnL0a2YuO8aeLLTQ">
@@ -3710,11 +3726,11 @@
   </value-owner>
   <value-owner id="ysW2O4OuPE+JXZZHiM7bgA">
    <value name="style">{&quot;fill-color&quot;: &quot;255,255,255,255&quot;}</value>
-   <value name="rendering">{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;model&quot;: &quot;oUNKi+15okyeKIB7PKKVWA&quot;,&quot;name&quot;: &quot;aasportal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;287,81,105,19&quot;,&quot;text&quot;: &quot;&lt;&lt;package&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;308,100,64,19&quot;,&quot;text&quot;: &quot;aasportal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;model&quot;: &quot;oUNKi+15okyeKIB7PKKVWA&quot;,&quot;name&quot;: &quot;aasportal&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;38,56,603,385&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;298,81,83,16&quot;,&quot;text&quot;: &quot;&lt;&lt;package&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;313,97,53,16&quot;,&quot;text&quot;: &quot;aasportal&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">38,56,603,385</value>
   </value-owner>
   <value-owner id="E1gB0K/1aEC4yFtDwLcsRA">
-   <value name="rendering">{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;common&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;281,202,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;305,218,49,16&quot;,&quot;text&quot;: &quot;common&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;model&quot;: &quot;09ZDFMDrFUyf7OuCrLmopQ&quot;,&quot;name&quot;: &quot;aas-core&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;138,56,383,305&quot;,&quot;path&quot;: &quot;shapes/package.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;35,15,3,20&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;281,202,97,16&quot;,&quot;text&quot;: &quot;&lt;&lt;workspace&gt;&gt;&quot;,&quot;type&quot;: &quot;Text&quot;},{&quot;bounds&quot;: &quot;305,218,50,16&quot;,&quot;text&quot;: &quot;aas-core&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;UMLPackageView&quot;}</value>
    <value name="bounds">138,56,383,305</value>
   </value-owner>
   <value-owner id="W2oDpgF/l0+GosDZXdfq1w">
@@ -4650,22 +4666,22 @@ WebDAV
 File System]]></value>
   </value-owner>
   <value-owner id="lv5cOhonIkONfkFZt/9d0w">
-   <value name="rendering">{&quot;bounds&quot;: &quot;371,655,166,106&quot;,&quot;model&quot;: &quot;tbO7QEXmeE2hsNe9+Sg56Q&quot;,&quot;name&quot;: &quot;Comment1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;371,655,166,106&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;376,660,74,96&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;AASX Server\nFAAAST\nBaSyx\nOPC UA\nWebDAV\nFile System&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;371,655,166,106&quot;,&quot;model&quot;: &quot;tbO7QEXmeE2hsNe9+Sg56Q&quot;,&quot;name&quot;: &quot;Comment1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;371,655,166,106&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;376,660,74,96&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;AASX Server\r\nFAAAST\r\nBaSyx\r\nOPC UA\r\nWebDAV\r\nFile System&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
    <value name="bounds">371,655,166,106</value>
   </value-owner>
   <value-owner id="nvq7J+QtYEWAUdAXIk4UEw">
    <value name="name">Comment2</value>
    <value name="order">20</value>
-   <value name="body"><![CDATA[Templates
-Static .aasx files]]></value>
+   <value name="body"><![CDATA[- Templates
+- Static .aasx files organised in a folder (endpoint)]]></value>
   </value-owner>
   <value-owner id="q0je4tOT6U+Jt9BRkZ25Ng">
-   <value name="rendering">{&quot;bounds&quot;: &quot;706,665,132,50&quot;,&quot;model&quot;: &quot;nvq7J+QtYEWAUdAXIk4UEw&quot;,&quot;name&quot;: &quot;Comment2&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;706,665,132,50&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;711,670,93,32&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;Templates\r\nStatic .aasx files&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
-   <value name="bounds">706,665,132,50</value>
+   <value name="rendering">{&quot;bounds&quot;: &quot;652,671,307,50&quot;,&quot;model&quot;: &quot;nvq7J+QtYEWAUdAXIk4UEw&quot;,&quot;name&quot;: &quot;Comment2&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;652,671,307,50&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;657,676,287,32&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;- Templates\n- Static .aasx files organised in a folder (endpoint)&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
+   <value name="bounds">652,671,307,50</value>
   </value-owner>
   <value-owner id="dbJ2ZXplg0mFAqQrROtyuQ">
-   <value name="rendering">{&quot;model&quot;: &quot;QLR5c0b2bEGrNcrGv5U2yw&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;771,665,771,610,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
-   <value name="points">771,665,771,610,</value>
+   <value name="rendering">{&quot;model&quot;: &quot;QLR5c0b2bEGrNcrGv5U2yw&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;798,671,782,610,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
+   <value name="points">798,671,782,610,</value>
   </value-owner>
   <value-owner id="851/DS5xbUWjVW5vTPPffA">
    <value name="name">UserStorage</value>
@@ -5531,6 +5547,32 @@ Static .aasx files]]></value>
   <value-owner id="K81tdr/0JUuz9jjwaF+eqA">
    <value name="rendering">{&quot;model&quot;: &quot;nQXu2MZ4bEW51iMg7auViw&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;453,655,453,610,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
    <value name="points">453,655,453,610,</value>
+  </value-owner>
+  <value-owner id="ZtMAiFX1j0aRRaff6X+9Nw">
+   <value name="name">Comment3</value>
+   <value name="order">24</value>
+   <value name="body"><![CDATA[PC
+Tablet
+Mobile Phone]]></value>
+  </value-owner>
+  <value-owner id="1CSm1GLCakaeAQ7iHk+MCg">
+   <value name="rendering">{&quot;bounds&quot;: &quot;601,87,127,65&quot;,&quot;model&quot;: &quot;ZtMAiFX1j0aRRaff6X+9Nw&quot;,&quot;name&quot;: &quot;Comment3&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;601,87,127,65&quot;,&quot;path&quot;: &quot;shapes/comment.png&quot;,&quot;preserveRatio&quot;: &quot;true&quot;,&quot;sliceMargin&quot;: &quot;1,14,13,1&quot;,&quot;type&quot;: &quot;Image&quot;},{&quot;bounds&quot;: &quot;606,92,76,48&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;PC\nTablet\nMobile Phone&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;CommentView&quot;}</value>
+   <value name="bounds">601,87,127,65</value>
+  </value-owner>
+  <value-owner id="cuko9kb+bEaJBPGlJE2UdQ">
+   <value name="rendering">{&quot;model&quot;: &quot;R/rBYR5BqkS8S0wyL8+Vwg&quot;,&quot;name&quot;: &quot;&quot;,&quot;render&quot;: [{&quot;lineStyle&quot;: &quot;2&quot;,&quot;lineWidth&quot;: &quot;0&quot;,&quot;points&quot;: &quot;601,112,536,105,&quot;,&quot;type&quot;: &quot;Line&quot;}],&quot;type&quot;: &quot;AnnotationLinkView&quot;}</value>
+   <value name="points">601,112,536,105,</value>
+  </value-owner>
+  <value-owner id="nNYTytmN+E6fRcW3SyzZfw">
+   <value name="name">Text1</value>
+   <value name="order">25</value>
+  </value-owner>
+  <value-owner id="g0jjnLiGUUycmsxOz0Rvzg">
+   <value name="rendering">{&quot;bounds&quot;: &quot;61,661,228,48&quot;,&quot;model&quot;: &quot;nNYTytmN+E6fRcW3SyzZfw&quot;,&quot;name&quot;: &quot;Text1&quot;,&quot;render&quot;: [{&quot;bounds&quot;: &quot;61,661,228,48&quot;,&quot;multiline&quot;: &quot;true&quot;,&quot;text&quot;: &quot;&lt;&lt;service&gt;&gt; : docker container\n&lt;&lt;image&gt;&gt; : docker image\n&lt;&lt;compose&gt;&gt; : docker multi-container&quot;,&quot;type&quot;: &quot;Text&quot;}],&quot;type&quot;: &quot;TextShapeView&quot;}</value>
+   <value name="bounds">61,661,228,48</value>
+   <value name="text"><![CDATA[<<service>> : docker container
+<<image>> : docker image
+<<compose>> : docker multi-container]]></value>
   </value-owner>
  </object-values>
  <relation-values>
