fix: update operation call

--- a/projects/aas-portal/src/assets/i18n/de-de.json
+++ b/projects/aas-portal/src/assets/i18n/de-de.json
@@ -10,6 +10,7 @@
     "CAPTION_DASHBOARD": "Dashboard",
     "CAPTION_INPUT_ARGUMENTS": "Eingangsargumente",
     "CAPTION_OUTPUT_ARGUMENTS": "Ausgangsargumente",
+    "CAPTION_INOUTPUT_ARGUMENTS": "Ein/Ausgangsargumente",
     "CAPTION_CREATE_WORKSPACE": "Gruppieren",
     "CAPTION_EDIT_WORKSPACE": "Gruppe bearbeiten",
     "CAPTION_REMOVE_WORKSPACE": "Gruppe löschen",
