--- a/projects/aas-portal/src/assets/i18n/en-us.json
+++ b/projects/aas-portal/src/assets/i18n/en-us.json
@@ -8,8 +8,9 @@
     "CAPTION_REGISTRATION": "Registration",
     "CAPTION_PASSWORD_FORGOTTEN": "Password forgotten?",
     "CAPTION_DASHBOARD": "Dashboard",
-    "CAPTION_INPUT_ARGUMENTS": "Input Arguments",
-    "CAPTION_OUTPUT_ARGUMENTS": "Output Arguments",
+    "CAPTION_INPUT_ARGUMENTS": "Input arguments",
+    "CAPTION_OUTPUT_ARGUMENTS": "Output arguments",
+    "CAPTION_INOUTPUT_ARGUMENTS": "In/Output arguments",
     "CAPTION_CREATE_WORKSPACE": "Group",
     "CAPTION_EDIT_WORKSPACE": "Edit Group",
     "CAPTION_REMOVE_WORKSPACE": "Remove Group",
